# NovaPath

./: .gitignore  CMakeLists.txt  README.md
include/: FileOutput.h  Missile.h  Simulation.h
src/: FileOutput.cpp  Missile.cpp  NovaPath.cpp  Simulation.cpp
util/: plotOutput.py
